--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
+    "standard": "^17.1.0",
     "uuid": "^9.0.0"
   },
   "description": ""
