Hotfix: merge 	modified:   api/controllers/user.js 	modified:   api/package.json 	modified:   api/routes/users.js

--- a/api/package.json
+++ b/api/package.json
@@ -23,5 +23,8 @@
     "standard": "^17.1.0",
     "uuid": "^9.0.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "standard": "^17.1.0"
+  }
 }
