--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
     "nodemailer": "^6.9.5",
     "nodemon": "^2.0.22",
     "standard": "^17.1.0",
